crates/test-files/fixtures/compile_errors/invalid_tuple_field.fe
contract Foo {
    val: (u256, u8)

    pub fn foo(self) {
        self.val.item5
    }
}
